@@ -1,8 +1,27 @@
-Space Invaders game in Javafx
+Space Invaders game in JavaFX
 ============================
 
 This project is the assignment of the Advanced Programming course taught by Dr.Eisazade in the Spring semester of 2020 at Sharif University of Technology.
 
-# Usage
+# Set up & Usage
+
+In order to set up this project, you need the following Java libraries:
+
+- JavaFX (Download from [here](https://gluonhq.com/products/javafx/))
+
+After downloading these libraries and the code source, you can run the `Main.java` file to play the game.
+
+If you use Intellij Idea to open this project, it is good to take note of the following points:
+
+- You can learn how to import the JavaFX library to your Intellij Idea project from [here](https://javabook.bloomu.edu/setupjavafx.html)
+- By going to
+>Run >> Edit Configurations
+
+and selecting `Modify options`, you can add VM Options. Add the following VM Optionn:
+> --module-path "\path\to\javafx-sdk-17\lib" --add-modules javafx.controls,javafx.fxml,javafx.media
+
+Change the `\path\to\javafx-sdk-17\lib` with you local JavaFX path.
+
 
 # Demo
+Following are some screenshots of the gameplay:
